@@ -19,7 +19,7 @@
     <!--   Navigation Bar  -->
     <nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background: rgb(0,0,0, 0.8)">
         <div class="container">
-            <a class="navbar-brand py-0" href="#">
+            <a class="navbar-brand py-0" href="index.html">
                 <!--                <img src="images/Logo.png" width="30px" height="30px" alt="Logo">-->
                 inHanguk </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,54 +37,23 @@
         </div>
     </nav>
     <!--    Navigation Bar End-->
-    
+
     <!-- Contact -->
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center pb-5">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading">Ask anything from us.</h3>
-          </div>
+<div class="container-fluid pt-5">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="container">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf_jTZrmWK1Ncz1mJNL4FNm8h8zEg4medAcp9BuC1ah6u4TCA/viewform?embedded=true" width="100%" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            </div>
         </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <form id="contactForm" name="sentMessage" novalidate="novalidate">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="clearfix"></div>
-                <div class="col-lg-12 text-center">
-                  <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-                </div>
-              </div>
-            </form>
-          </div>
+        <div class="col-md-6" id="contact-image">
+            <img class="img-fluid" src="images/applook-main.png">
         </div>
-      </div>
-    </section>
+    </div>
+</div>        
+ 
     <!-- Contact -->
 
-    
     <!--   <Footer>-->
     <footer class="py-4" style="background: black">
         <div class="container">
