@@ -19,7 +19,7 @@
     <!--   Navigation Bar  -->
     <nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background: rgb(0,0,0, 0.8)">
         <div class="container">
-            <a class="navbar-brand py-0" href="#">
+            <a class="navbar-brand py-0" href="index.html">
                 <!--                <img src="images/Logo.png" width="30px" height="30px" alt="Logo">-->
                 inHanguk </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link py-1" href="index.html">About </a>
                     <a class="nav-item nav-link py-1" href="plans.html">Plans</a>
-                    <a class="nav-item nav-link py-1 active" href="invest.html">Invest<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active py-1" href="#">Invest<span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link py-1" href="team.html">Team</a>
                     <a class="nav-item nav-link py-1" href="contact.html">Contact</a>
                 </div>
