@@ -18,7 +18,7 @@
     <!--   Navigation Bar  -->
     <nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background: rgb(0,0,0, 0.8)">
         <div class="container">
-            <a class="navbar-brand py-0" href="#">
+            <a class="navbar-brand py-0" href="index.html">
                 <!--                <img src="images/Logo.png" width="30px" height="30px" alt="Logo">-->
                 inHanguk </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
